# sentient_flow

./: .coverage  README.md  pyproject.toml
alembic/versions/: 29786148c766_add_output_index.py  6c7bf4981965_rename_node_id_to_node_name.py  7e2037e10b22_add_ondelete_cascade_to_executionnode.py  b7c960ee7f28_add_execution_and_execution_node_tables.py
app/: __init__.py  credential_loader.py  main.py  node_handlers.py  tasks.py  workflow_engine.py  workflow_executor.py  workflow_graph.py
app/api/routes/: auth.py  executions.py  workflows.py
app/core/: config.py  rate_limit.py
app/models/: execution_node.py  workflow.py
app/schemas/: execution.py  users.py
app/services/: cipher.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: CredentialsModal.tsx  ImportWorkflowModal.tsx
frontend/src/components/canvas/: ExecutionHistory.tsx  NodePalette.tsx  PropertiesPanel.tsx  WorkflowNode.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/config/: nodeDefinitions.ts
frontend/src/lib/: api.ts
frontend/src/pages/: CanvasPage.tsx  DashboardPage.tsx  ExecutionsPage.tsx  LoginPage.tsx
frontend/src/stores/: executionStore.ts  workflowStore.ts
tests/: conftest.py  test_engine.py  test_workflows.py
